    Updated Russian locale (thanks ImDaniX)
    Added Donkeys to beat lore (thanks QuantumToasted)
    Alchemy guide now correctly labels Rabbit's foot for potion of leaping (thanks mldriscoll)
    Fixed a bug where sweet berry bushes would give XP in situations where they shouldn't

    NOTES:
    Previously treasures.yml would take drop_level and multiply it by 10 if you were on Retro Mode, this is confusing so it has been changed
    treasures.yml will update old entries to follow the new format automatically, please review them to make sure they match expected values, and if not edit them and save then reboot your server

Version 2.1.182
    Players now receive XP from harvesting Sweet Berry bushes (double XP for harvesting fully grown berries)
    Fixed an error when using mcMMO with Featherboard that broke mcMMO skill boards when using certain commands
    Fixed a NPE with Scoreboards enabled when trying to update scoreboards
    Added 'Scoreboard.Recovery' locale key
    Sweet Berry Bush will no longer ready tools for Super Abilities
    You can now use '.all' (for example: mcmmo.perks.xp.customboost.all) to give an XP perk to all skills
    Removed hardcore and vampirism commands, these commands are dangerous, just modify the config file if you want to use hardcore / vampirism
    Fixed several errors in de locale (Thanks TheBusyBiscuit & w1tcherrr)
    Fixed a bug where double smelt never succeeded if the furnace was empty (but worked normally afterwards)
    Added some safety so that mcMMO automatic save interval is never more frequent than 1 minute
    Removed a few silent exceptions for scoreboards & mcMMO
    Added warning about UltraPermissions to mcMMO
    Fixed a potential NPE in McMMOPlayerExperienceEvent
    Added Sweet Berry Bush to config.yml bonus drops for Herbalism

    NOTES:
    Sweet Berry Bushes won't give double drops for now, looking into an elegant solution